tab.
[+] "Max announce interval" setting in the Daemon::Network::Misc settings tab.
[+] More compact torrent's details tab.
[+] Deleting torrents by Delete key and deleting torrents with data by Shift +
Delete keys.
[+] Some small GUI and internal enhancements.
[+] Torrent's categories sidebar (all, paused, seeding, etc.).
[*] Fixed bug, due to which GUI may freeze and do not to response.


0.6 (2009.06.11)
[+] Ability to choose torrent file's character set encoding in the open
torrent dialog.
[+] "Publisher URL" line in the details tab.
[+] "Tracker status" line in the details tab.
[+] "Tracker" column in the torrents list.
[+] Tracker errors indication by grayscaling torrent's status icon.
[+] Recheck option in the torrent right-button-menu.
[+] Torrents temporary pausing and resuming .
[+] Libtorrent 0.14.4 (for bundle version).
[+] Ubuntu Hardy backport.
[*] Fixed some small command line options processing bug.
[*] Fixed GTK locking bug.


0.5.1 (2009.05.25)
[+] Increased maximum peers number, which Flush request from tracker to
libtorrent maximum value.
[*] Wrapper around GTK bug which caused tooltips blinking on GUI updating.
[*] Some small internal fixes.


0.5 (2009.05.15)
[+] Added toolbar.
[+] Tooltip over tray icon.
[+] Current Download/Upload speed in window title.
[+] Short "Torrents view" and "Torrent peers view" columns names.
[+] Treeview's headers and some settings window options tooltips.
[+] Updated boost configure macros.
[+] Automatic torrents removing by share ratio.
[+] Automatic torrents loading from specified directory.
[+] Libtorrent 0.14.3 (for bundle version).
[+] "Hide main window to tray at startup", "Minimize to tray" and "Close to
tray" settings.
[+] IP filter.
[+] From this moment all new GUI interfaces will be created using Glade.
[+] "Show zero values in torrents info columns" setting.
[+] Ability to choose action (pause, remove, remove with data), that Flush