@@ -71,6 +71,10 @@
 			/// Скрывает окно.
 			void	hide(void);
 
+			/// Определяет, отображается ли окно в элементах оконного
+			/// менеджера (в панели задач и меню, вызываемом по Alt+Tab).
+			bool	is_visible_in_wm(void);
+
 			/// При выборе пункта меню "Изменить максимальную скорость скачивания/отдачи".
 			void	on_change_rate_limit_callback(Traffic_type traffic_type);
 
